update job description

--- a/index.html
+++ b/index.html
@@ -130,12 +130,28 @@
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Work Experience</h3></div>
 						</li>
+
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Automobile Association Philippines</h3>
+									<span class="company">2024 - Current</span>
+								</div>
+								<div class="timeline-body">
+									<p>Full Stack Developer (Laravel And Flutter)</p>
+									<p>683 Aurora Boulevard, Quezon City 1112</p>
+
+								</div>
+							</div>
+						</li>
+
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Filipinas Multi-Line Corp(Multi-Line)</h3>
-									<span class="company">2022 - Current</span>
+									<span class="company">2022 - 2024</span>
 								</div>
 								<div class="timeline-body">
 									<p>System Programmer</p>
